test/lit/pto/tload_invalid_rank.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

// Test TLOAD.MAT invalid rank - should fail because MAT requires rank-2

module attributes {pto.target_arch = "a5"} {
 func.func @tload_invalid_rank(%src_gm: !pto.ptr<f16, gm>, %dst_l1: !pto.ptr<f16, l1>) attributes {pto.kernel_kind = #pto.kernel_kind<cube>, pto.aicore} {
 %c0 = arith.constant 0 : i64

 // This should fail - rank-3 is not valid for TLOAD.MAT
 %dst_tile = pto.alloc_tile addr = %c0 : !pto.tile_buf<mat, 16x32x4xf16, blayout=col_major, slayout=row_major>

 %dst_ptr = pto.tile_buf_addr %dst_tile : !pto.tile_buf<mat, 16x32x4xf16, blayout=col_major, slayout=row_major> -> !pto.ptr<f16, l1>

 // This should NOT match TLOAD.MAT template because rank is 3, not 2
 pto.tload %src_gm, %dst_ptr : !pto.ptr<f16, gm>, !pto.ptr<f16, l1>

 pto.barrier #pto.pipe<PIPE_ALL>
 return
 }
}

// CHECK: error: no matching template for pto.tload
// CHECK-SAME: rank constraint